sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Audit_Log__c/PLS_FB_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>PLS FB Audit Log</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PLS FB Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>