sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Audit_Log__c/fields/PLS_FB_Detail__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_Detail__c</fullName>
    <label>Detail</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>