sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Audit_Log__c/fields/PLS_FB_Kind__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_Kind__c</fullName>
    <label>Kind</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AsyncEnrichment</fullName>
            </value>
            <value>
                <fullName>LedgerFault</fullName>
            </value>
            <value>
                <fullName>Reopen</fullName>
            </value>
            <value>
                <fullName>CloseoutFault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>